Fix T39245: Crash when dynamic topology is enabled

Redundant decrement was crashing for systems which didnt optimize it out.