extern/rangetree/range_tree.hh
@@ -79,10 +79,6 @@ struct RangeTree {
 		TreeIter iter = tree.find(Range(t));
 		assert(iter != tree.end());
 		Range cur = *iter;
-		TreeIter prev = iter;
-		TreeIter next = iter;
-		--prev;
-		++next;
 
 		/* Remove the original range (note that this does not
 		   invalidate the prev/next iterators) */
